# buaa-cli

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml
src/: boya.rs  class.rs  command.rs  config.rs  evaluation.rs  main.rs  sso.rs  tes.rs  util.rs  utils.rs  wifi.rs
