[package]
name = "buaa"
version = "0.3.4"
edition = "2024"

[dependencies]
buaa_api = { git = "https://github.com/fontlos/buaa-api", rev = "3e41592"}
# buaa_api = { path = "../buaa-api" }
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tabled = "0.20.0"
textwrap = "0.16.2"
time = "0.3.44"
tokio = { version = "1.48.0", features = ["full"] }

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true
