[package]
name = "buaa"
version = "0.3.6"
edition = "2024"

[dependencies]
buaa_api = { git = "https://github.com/fontlos/buaa-api", rev = "45bd87e"}
# buaa_api = { path = "../buaa-api" }
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tabled = "0.20.0"
textwrap = "0.16.2"
tokio = { version = "1.50.0", features = ["full"] }

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true
